[gd_scene load_steps=4 format=3 uid="uid://u1yc2j4db2v6"]

[ext_resource type="Script" path="res://Scripts/entities/other/trash.gd" id="1_dcsou"]
[ext_resource type="Texture2D" uid="uid://ddivbk3h7g0ms" path="res://Assets/Images/trashSprites/Waterbottle.png" id="2_sm4yy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_myspa"]
radius = 22.0227

[node name="Trash" type="CharacterBody2D"]
script = ExtResource("1_dcsou")

[node name="TrashSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_sm4yy")

[node name="trashArea2D" type="Area2D" parent="."]
collision_layer = 49
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="trashArea2D"]
shape = SubResource("CircleShape2D_myspa")

[connection signal="area_entered" from="trashArea2D" to="." method="_on_trash_area_2d_area_entered"]
[connection signal="area_exited" from="trashArea2D" to="." method="_on_trash_area_2d_area_exited"]
